@@ -1,3 +1,9 @@
+2005-08-16  Philippe Gerum  <rpm@xenomai.org>
+
+	* nucleus/timer.c: Rework and simplify timer locking code.
+
+	* arch/generic/hal/generic.c: Group spinlock debugging features.
+
 2005-08-15  Philippe Gerum  <rpm@xenomai.org>
 
 	* arch/i386/patches: Add ltt-enabled r12 patch.
